--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             margin-top: 2rem;
         }
         
-        section {
+        section {o
             background: white;
             padding: 2rem;
             margin: 2rem 0;
@@ -137,8 +137,7 @@
 <body>
     <header>
         <div class="container">
-            <img src="https://instagram.fjed5-2.fna.fbcdn.net/v/t51.2885-19/526254401_18064809083514584_6460526934137003077_n.jpg?efg=eyJ2ZW5jb2RlX3RhZyI6InByb2ZpbGVfcGljLmRqYW5nby4xMDgwLmMyIn0&_nc_ht=instagram.fjed5-2.fna.fbcdn.net&_nc_cat=108&_nc_oc=Q6cZ2QHUpRHBNPcFnsgNy-lTOCC1BUKwpFtRe1JWm9S9fKGrVM8b2Ub9WNGD2zzLy257lPo&_nc_ohc=-F48rdaS7pAQ7kNvwEoFu5G&_nc_gid=Zj0thKuPYnocSAr3SlkWIQ&edm=AEF8tYYBAAAA&ccb=7-5&oh=00_AfVpfpefqcLdoonQQs6CDyGYJoqSyAmgp2Y_05ychNIXCw&oe=68983445&_nc_sid=1e20d2" alt="Nafsin Ferdous" class="profile-img">
-            <h1>Nafsin Ferdous</h1>
+            <img src="https://instagram.fjed5-2.fna.fbcdn.net/v/t51.2885-19/526254401_18064809083514584_6460526934137003077_n.jpg?efg=eyJ2ZW5jb2RlX3RhZyI6InByb2ZpbGVfcGljLmRqYW5nby4xMDgwLmMyIn0&_nc_ht=instagram.fjed5-2.fna.fbcdn.net&_nc_cat=108&_nc_oc=Q6cZ2QHUpRHBNPcFnsgNy-lTOCC1BUKwpFtRe1JWm9S9fKGrVM8b2Ub9WNGD2zzLy257lPo&_nc_ohc=-F48rdaS7pAQ7kNvwEoFu5G&_nc_gid=Zj0thKuPYnocSAr3SlkWIQ&edm=AEF8tYYBAAAA&ccb=7-5&oh=00_AfVpfpefqcLdoonQQs6CDyGYJoqSyAmgp2Y_05ychNIXCw&oe=68983445&_nc_sid=1e20d2"> <h1>Nafsin Ferdous</h1>
             <p>Cybersecurity Researcher | OSINT Investigator</p>
             
             <div class="social-links">
