--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nafsin Ferdous - Cybersecurity Researcher</title>
+    <title>Nafsin Ferdous - Cybersecurity Enthusiast</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 
@@ -187,8 +187,8 @@
     <main class="container">
         <section id="about" class="scroll-reveal">
             <h2>About Me</h2>
-            <p>I am a cybersecurity researcher with a passion for OSINT (Open Source Intelligence) and digital investigations. My work focuses on uncovering digital footprints and analyzing online data to enhance security awareness and protect against potential threats.</p>
-            <p>With a strong technical background and an investigative mindset, I enjoy tackling complex cybersecurity challenges and sharing my knowledge through case studies and research.</p>
+            <p>I am a cybersecurity enthusiast with a deep passion for OSINT (Open Source Intelligence) and digital investigations. While I'm still on my learning journey and consider myself at an intermediate level, I dedicate my free time to exploring digital footprints and analyzing online data.</p>
+            <p>This hobby allows me to enhance my security awareness and understand how to protect against potential threats. I enjoy tackling the complex challenges that cybersecurity presents and am always eager to expand my knowledge in this ever-evolving field.</p>
         </section>
         
         <section id="education" class="scroll-reveal">
@@ -217,7 +217,7 @@
         document.addEventListener('DOMContentLoaded', function() {
             // Typed.js animation
             var typed = new Typed('#typed-output', {
-                strings: ["Cybersecurity Researcher", "OSINT Investigator", "Digital Explorer"],
+                strings: ["Cybersecurity Enthusiast", "OSINT Hobbyist", "Digital Explorer"],
                 typeSpeed: 50,
                 backSpeed: 25,
                 backDelay: 1500,
