--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
     <main class="container">
         <section id="about" class="scroll-reveal">
             <h2>About Me</h2>
-            <p>I am a cybersecurity enthusiast with a deep passion for OSINT (Open Source Intelligence) and digital investigations. While I'm still on my learning journey and consider myself at an intermediate level, I dedicate my free time to exploring digital footprints and analyzing online data.</p>
-            <p>This hobby allows me to enhance my security awareness and understand how to protect against potential threats. I enjoy tackling the complex challenges that cybersecurity presents and am always eager to expand my knowledge in this ever-evolving field.</p>
+            <p>Born on September 24, 2003, I am a cybersecurity enthusiast currently residing in Rangpur, Bangladesh. My deep passion lies in OSINT (Open Source Intelligence) and digital investigations. While I'm still on my learning journey and consider myself at an intermediate level, I dedicate my free time to exploring digital footprints and analyzing online data.</p>
+            <p>Beyond hacking and programming, I have a strong interest in chess. In 2024, I was the champion in the chess-men competition at the indoor games organized by BGMEA University of Fashion & Technology. I am not only a player but also enjoy teaching the game to others.</p>
         </section>
         
         <section id="education" class="scroll-reveal">
@@ -219,7 +219,7 @@
         document.addEventListener('DOMContentLoaded', function() {
             // Typed.js animation
             var typed = new Typed('#typed-output', {
-                strings: ["Cybersecurity Enthusiast", "OSINT Hobbyist", "Digital Explorer"],
+                strings: ["Cybersecurity Enthusiast", "OSINT Hobbyist", "Digital Explorer", "Chess Player"],
                 typeSpeed: 50,
                 backSpeed: 25,
                 backDelay: 1500,
