--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Nafsin Ferdous">
     <meta name="keywords" content="Nafsin Ferdous, hacker-ferdous, Hacker Ferdous, নাফসিন ফেরদৌস">
+    <meta name="description" content="Nafsin Ferdous | He is a cybersecurity enthusiast from Rangpur, Bangladesh. He is also a chess player. Learn more about him...">
     <title>Nafsin Ferdous - Cybersecurity Enthusiast</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
