--- a/brainX/index.html
+++ b/brainX/index.html
@@ -551,7 +551,10 @@
             </div>
         </div>
     </div>
-
+    <div id="friends-info" aria-hidden="true" style="position: absolute; top: -9999px; left: -9999px; width: 0; height: 0; overflow: hidden; opacity: 0; pointer-events: none; z-index: -1;">
+        <p>My friends: Mridula, Raeid, Fahim, Jesmin, Jahin.</p>
+    </div>
+	<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function() {
         const particlesContainer = document.getElementById('particles');
