--- a/index.html
+++ b/index.html
@@ -1092,7 +1092,7 @@
                     </div>
                 </div>
                 <div class="hero-image-container">
-                    <img src="https://lh3.googleusercontent.com/a-/ALV-UjWUEVkB_QQBbon1vCkcG_F7oqxnZNNSogK8AUKHJH6lAvqZplfFxg" alt="Nafsin Ferdous Profile Picture" class="hero-img">
+                    <img src="https://lh3.googleusercontent.com/a-/ALV-https://lh3.googleusercontent.com/a-/ALV-UjUN_tXDu2qNeu9Pqf4OilD_kxiu6ED86MIxJ6W8xyl_Ch6NQmtwhA" alt="Nafsin Ferdous Profile Picture" class="hero-img">
                 </div>
             </div>
         </section>
