--- a/Encoder/index.html
+++ b/Encoder/index.html
@@ -965,7 +965,7 @@
             <div id="decode-password-container" class="password-container">
                 <label for="decode-password" class="form-label">Decryption Password</label>
                 <div class="input-wrapper">
-                    <input type="password" id="decode-password" placeholder="Enter password to reveal message">
+                    <input type="password" id="decode-password" placeholder="Enter the password">
                     <div class="input-adornment right">
                         <input type="checkbox" id="show-decode-password">
                         <label for="show-decode-password" class="password-visibility-toggle" title="Show/Hide Password">
