--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="author" content="Nafsin Ferdous">
     <meta name="keywords" content="Nafsin Ferdous, hacker-ferdous, Hacker Ferdous, নাফসিন ফেরদৌস, Cybersecurity, OSINT, Chess Player, BNCC">
     <meta name="description" content="Nafsin Ferdous | Cybersecurity enthusiast, OSINT specialist, chess player, and multi-talented professional from Rangpur, Bangladesh">
+    <meta property="og:image" content="https://lh3.googleusercontent.com/a-/ALV-UjUN_tXDu2qNeu9Pqf4OilD_kxiu6ED86MIxJ6W8xyl_Ch6NQmtwhA">
+    <meta property="og:title" content="Nafsin Ferdous">
+    <meta name="facebook:image" content="https://lh3.googleusercontent.com/a-/ALV-UjUN_tXDu2qNeu9Pqf4OilD_kxiu6ED86MIxJ6W8xyl_Ch6NQmtwhA">
     <title>Nafsin Ferdous</title>
     
     <link rel="icon" href="https://lh3.googleusercontent.com/a-/ALV-UjUN_tXDu2qNeu9Pqf4OilD_kxiu6ED86MIxJ6W8xyl_Ch6NQmtwhA" type="image/x-icon">
@@ -1092,7 +1095,7 @@
                     </div>
                 </div>
                 <div class="hero-image-container">
-                    <img src="https://lh3.googleusercontent.com/a-/ALV-UjUN_tXDu2qNeu9Pqf4OilD_kxiu6ED86MIxJ6W8xyl_Ch6NQmtwhA" alt="Nafsin Ferdous" class="hero-img">
+                    <img src="https://lh3.googleusercontent.com/a-/ALV-UjUN_tXDu2qNeu9Pqf4OilD_kxiu6ED86MIxJ6W8xyl_Ch6NQmtwhA" alt="Nafsin Ferdous" class="hero-img"  title="Nafsin Ferdous">
                 </div>
             </div>
         </section>
@@ -1461,6 +1464,16 @@
                 particlesJS("particles-js", { "particles": { "number": { "value": 80, "density": { "enable": true, "value_area": 800 } }, "color": { "value": "#ffffff" }, "shape": { "type": "circle", "stroke": { "width": 0, "color": "#000000" }, "polygon": { "nb_sides": 5 } }, "opacity": { "value": 0.5, "random": false, "anim": { "enable": false, "speed": 1, "opacity_min": 0.1, "sync": false } }, "size": { "value": 3, "random": true, "anim": { "enable": false, "speed": 40, "size_min": 0.1, "sync": false } }, "line_linked": { "enable": true, "distance": 150, "color": "#ffffff", "opacity": 0.4, "width": 1 }, "move": { "enable": true, "speed": 6, "direction": "none", "random": false, "straight": false, "out_mode": "out", "bounce": false, "attract": { "enable": false, "rotateX": 600, "rotateY": 1200 } } }, "interactivity": { "detect_on": "canvas", "events": { "onhover": { "enable": true, "mode": "repulse" }, "onclick": { "enable": true, "mode": "push" }, "resize": true }, "modes": { "grab": { "distance": 400, "line_linked": { "opacity": 1 } }, "bubble": { "distance": 400, "size": 40, "duration": 2, "opacity": 8, "speed": 3 }, "repulse": { "distance": 200, "duration": 0.4 }, "push": { "particles_nb": 4 }, "remove": { "particles_nb": 2 } } }, "retina_detect": true });
             }
         });
+    </script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Nafsin Ferdous",
+  "url": "https://hacker-ferdous.github.io/",
+  "image": "https://lh3.googleusercontent.com/a-/ALV-UjUN_tXDu2qNeu9Pqf4OilD_kxiu6ED86MIxJ6W8xyl_Ch6NQmtwhA",
+  "description": "Professional profile of Nafsin Ferdous"
+}
     </script>
 </body>
 </html>
