--- a/index.html
+++ b/index.html
@@ -19,6 +19,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto+Mono:wght@400;500;700&display=swap" rel="stylesheet">
 
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Nafsin Ferdous",
+  "url": "https://hacker-ferdous.github.io/",
+  "image": "https://lh3.googleusercontent.com/a-/ALV-UjUN_tXDu2qNeu9Pqf4OilD_kxiu6ED86MIxJ6W8xyl_Ch6NQmtwhA",
+  "description": "Nafsin Ferdous | Cybersecurity enthusiast, OSINT specialist, chess player, and multi-talented professional from Rangpur, Bangladesh",
+  "sameAs": [
+    "https://www.facebook.com/nafsin.ferdous.5",
+    "https://github.com/hacker-ferdous",
+    "https://www.linkedin.com/in/nafsin-ferdous-aa14b2301/",
+    "https://www.instagram.com/n.ferdous_",
+    "https://www.chess.com/member/nafsinferdous",
+    "https://lichess.org/@/Ferdous9709"
+  ]
+}
+</script>
 
 <style>
     /* 
@@ -1464,16 +1482,6 @@
                 particlesJS("particles-js", { "particles": { "number": { "value": 80, "density": { "enable": true, "value_area": 800 } }, "color": { "value": "#ffffff" }, "shape": { "type": "circle", "stroke": { "width": 0, "color": "#000000" }, "polygon": { "nb_sides": 5 } }, "opacity": { "value": 0.5, "random": false, "anim": { "enable": false, "speed": 1, "opacity_min": 0.1, "sync": false } }, "size": { "value": 3, "random": true, "anim": { "enable": false, "speed": 40, "size_min": 0.1, "sync": false } }, "line_linked": { "enable": true, "distance": 150, "color": "#ffffff", "opacity": 0.4, "width": 1 }, "move": { "enable": true, "speed": 6, "direction": "none", "random": false, "straight": false, "out_mode": "out", "bounce": false, "attract": { "enable": false, "rotateX": 600, "rotateY": 1200 } } }, "interactivity": { "detect_on": "canvas", "events": { "onhover": { "enable": true, "mode": "repulse" }, "onclick": { "enable": true, "mode": "push" }, "resize": true }, "modes": { "grab": { "distance": 400, "line_linked": { "opacity": 1 } }, "bubble": { "distance": 400, "size": 40, "duration": 2, "opacity": 8, "speed": 3 }, "repulse": { "distance": 200, "duration": 0.4 }, "push": { "particles_nb": 4 }, "remove": { "particles_nb": 2 } } }, "retina_detect": true });
             }
         });
-    </script>
-    <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Person",
-  "name": "Nafsin Ferdous",
-  "url": "https://hacker-ferdous.github.io/",
-  "image": "https://lh3.googleusercontent.com/a-/ALV-UjUN_tXDu2qNeu9Pqf4OilD_kxiu6ED86MIxJ6W8xyl_Ch6NQmtwhA",
-  "description": "Professional profile of Nafsin Ferdous"
-}
     </script>
 </body>
 </html>
