--- a/python/index.html
+++ b/python/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Professional Python Web IDE</title>
+    <title>Python Web IDE</title>
 
     <!-- Brython and CodeMirror Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/brython@3/brython.min.js"></script>
