--- a/index.html
+++ b/index.html
@@ -1281,10 +1281,29 @@
 
         <section class="section" id="projects">
             <div class="container">
-                <h2 class="section-title">My Project</h2>
+                <h2 class="section-title">My Projects</h2>
                 <div class="projects-grid">
                     <div class="project-card">
-                        <div class="project-image">
+                        <div class="project-image"><div class="project-card">
+    <div class="project-image">
+       <i class="fab fa-python"></i>
+    </div>
+    <div class="project-content">
+        <h3>Python Web IDE</h3>
+        <p class="project-description">
+            A browser-based Python code editor. Run and test your Python scripts directly in your web browser.
+        </p>
+        <div class="project-tags">
+            <span>Python</span>
+            <span>IDE</span>
+            <span>Web Tool</span>
+        </div>
+        <div class="project-links">
+            <a href="https://hacker-ferdous.github.io/python" target="_blank" class="project-link primary"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+            <a href="https://github.com/hacker-ferdous/hacker-ferdous.github.io/tree/main/python" target="_blank" class="project-link"><i class="fab fa-github"></i> Source Code</a>
+        </div>
+    </div>
+</div>
                            <i class="fas fa-brain"></i>
                         </div>
                         <div class="project-content">
@@ -1324,75 +1343,26 @@
         	           </div>
     			</div>
 		    </div>
-<section class="section" id="projects">
-    <div class="container">
-        <h2 class="section-title">My Projects</h2>
-        <div class="projects-grid">
-            <div class="project-card">
-                <div class="project-image">
-                   <i class="fas fa-brain"></i>
-                </div>
-                <div class="project-content">
-                    <h3>AI Project: brainX</h3>
-                    <p class="project-description">
-                        A personal AI assistant project developed using the Gemini 2.0 Flash model. This project explores the capabilities of modern language models and their integration into custom applications.
-                    </p>
-                    <div class="project-tags">
-                        <span>AI</span>
-                        <span>Gemini 2.0</span>
-                        <span>Web AI</span>
-                    </div>
-                    <div class="project-links">
-                        <a href="https://hacker-ferdous.github.io/brainX" target="_blank" class="project-link primary"><i class="fas fa-external-link-alt"></i> Live Demo</a>
-                        <a href="https://github.com/hacker-ferdous/hacker-ferdous.github.io/tree/main/brainX" target="_blank" class="project-link"><i class="fab fa-github"></i> Source Code</a>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="project-card">
-                <div class="project-image">
-                   <i class="fas fa-key"></i>
-                </div>
-                <div class="project-content">
-                    <h3>Secret Text Encoder</h3>
-                    <p class="project-description">
-                        Embed your private messages within plain text using advanced steganography and encryption.
-                    </p>
-                    <div class="project-tags">
-                        <span>Steganography</span>
-                        <span>Encryption</span>
-                        <span>Security</span>
-                    </div>
-                    <div class="project-links">
-                        <a href="https://hacker-ferdous.github.io/Encoder/" target="_blank" class="project-link primary"><i class="fas fa-external-link-alt"></i> Live Demo</a>
-                        <a href="https://github.com/hacker-ferdous/hacker-ferdous.github.io/tree/main/Encoder" target="_blank" class="project-link"><i class="fab fa-github"></i> Source Code</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="project-card">
-                <div class="project-image">
-                   <i class="fab fa-python"></i>
-                </div>
-                <div class="project-content">
-                    <h3>Python Web IDE</h3>
-                    <p class="project-description">
-                        A browser-based Python code editor. Run and test your Python scripts directly in your web browser.
-                    </p>
-                    <div class="project-tags">
-                        <span>Python</span>
-                        <span>IDE</span>
-                        <span>Web Tool</span>
-                    </div>
-                    <div class="project-links">
-                        <a href="https://hacker-ferdous.github.io/python" target="_blank" class="project-link primary"><i class="fas fa-external-link-alt"></i> Live Demo</a>
-                        <a href="https://github.com/hacker-ferdous/hacker-ferdous.github.io/tree/main/python" target="_blank" class="project-link"><i class="fab fa-github"></i> Source Code</a>
-                    </div>
-                </div>
-            </div>
+	<div class="project-card">
+    		<div class="project-image">
+       			<i class="fab fa-python"></i>
+    	</div>
+    <div class="project-content">
+        <h3>Python Web IDE</h3>
+        <p class="project-description">
+            A browser-based Python code editor. Run and test your Python scripts directly in your web browser.
+        </p>
+        <div class="project-tags">
+            <span>Python</span>
+            <span>IDE</span>
+            <span>Web Tool</span>
+        </div>
+        <div class="project-links">
+            <a href="https://hacker-ferdous.github.io/python" target="_blank" class="project-link primary"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+            <a href="https://github.com/hacker-ferdous/hacker-ferdous.github.io/tree/main/python" target="_blank" class="project-link"><i class="fab fa-github"></i> Source Code</a>
         </div>
     </div>
-</section>
+</div>
 	<!-- new project --->
                 </div>
             </div>
