--- a/index.html
+++ b/index.html
@@ -1324,7 +1324,26 @@
         	           </div>
     			</div>
 		    </div>
-
+		    <div class="project-card">
+    			<div class="project-image">
+       				<i class="fab fa-python"></i>
+    			</div>
+    		<div class="project-content">
+        		<h3>Python Web IDE</h3>
+        			<p class="project-description">
+            			A browser-based Python code editor. Run and test your Python scripts directly in your web browser.
+        			</p>
+        			<div class="project-tags">
+            			<span>Python</span>
+            			<span>IDE</span>
+            			<span>Web Tool</span>
+        			</div>
+        			<div class="project-links">
+            			<a href="https://hacker-ferdous.github.io/python" target="_blank" class="project-link primary"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+            			<a href="https://github.com/hacker-ferdous/hacker-ferdous.github.io/tree/main/python" target="_blank" class="project-link"><i class="fab fa-github"></i> Source Code</a>
+        			</div>
+   				 </div>
+			</div>
 	<!-- new project --->
                 </div>
             </div>
